c4prj2_input/grade.txt
Grading at Fri Jan  3 03:18:54 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:10:32: error: passing argument 1 of ‘atoi’ makes pointer from integer without a cast [-Werror=int-conversion]
       add_future_card(fc, atoi(*(str+1)), hand->cards[hand->n_cards - 1])
                                ^
In file included from deck.h:3:0,
                 from input.h:4,
                 from input.c:1:
/usr/include/stdlib.h:147:12: note: expected ‘const char *’ but argument is of type ‘char’
 extern int atoi (const char *__nptr)
            ^
input.c:11:5: error: expected ‘;’ before ‘}’ token
     } else {
     ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
